refactor: 서비스 로직 책임 분리 및 공통 집계 모듈 생성(aggregator)